--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "thesis-build-archive",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "author": "Jan Kaßel <jan@kassel.works>",
   "private": true,
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "build-metadata": "build.js",
+    "build-metadata": "./build.js",
     "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,7 +25,9 @@
   },
   "homepage": "https://github.com/falafeljan/thesis-build-archive#readme",
   "devDependencies": {
+    "minimatch": "^3.0.4",
     "next": "^9.2.2",
+    "nodegit": "^0.26.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
