--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "next build && next export",
     "build-metadata": "./build.js",
     "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
