--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/falafeljan/thesis-build-archive#readme",
   "devDependencies": {
+    "@sendgrid/mail": "^6.5.3",
     "minimatch": "^3.0.4",
     "next": "^9.2.2",
     "nodegit": "^0.26.4",
